--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">DiscoveryMovie</string>
+    <string name="addfavorite">Add To\nFavorite</string>
+    <string name="delfavorite">Remove From\nFavorite</string>
 </resources>
